finish updates to support PATCH
